--- a/oloo_works_1.html
+++ b/oloo_works_1.html
@@ -93,7 +93,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">前言</div>
                         <div class="pup_normal_text" style="margin-bottom:5px;">
-                            事前我們先與專案負責人了解研究脈絡，接續訪談Oloo創辦人得知營運的市場經驗。
+                            事前先與專案負責人了解研究脈絡，訪談Oloo創辦人得知營運市場經驗。
                         </div>
                         <div>
                             <picture>
@@ -295,7 +295,7 @@
                         <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:0px;">
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">三、篩選假設</div>
-                                <div class="pup_normal_text">成員交互驗證各自的商業機會、風險，根據「已知、未知」和「商業價值高、低」以十字量表分類排序出<span class="emphasize_text">具「未知」和「高商業價值」</span>之機會和風險。</div>
+                                <div class="pup_normal_text">成員交互驗證各自的商業機會、風險，<br/>根據「已知、未知」和「商業價值高、低」以十字量表分類，排序出<span class="emphasize_text">具「未知」和「高商業價值」</span>之機會和風險。</div>
                                 <div class="pup_normal_text" style="margin-top:20px;">團隊歸納版本</div>
                                 <div class="pup_normal_text font_bold emphasize_text" style="margin-top:10px;margin-bottom:5px;">機會假設</div>
                                 <div class="pup_content_pic" style="">
@@ -318,7 +318,7 @@
                                     </picture>
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">
-                                    用「已知、未知」和「商業價值高、低」，<br /><span class="emphasize_text">以十字量表分類排序。</span>
+                                    根據「已知、未知」和「商業價值高、低」，<br /><span class="emphasize_text">以十字量表分類排序。</span>
                                 </div>
                                 <div class="pup_content_pic">
                                     <picture>
@@ -414,12 +414,12 @@
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">三、提出議題</div>
                                 <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">
-                                    延伸研究議題：<br />
+                                    研究議題：<br />
                                     <span class="font_bold emphasize_text">「逛展族群會有哪些因素，影響展區中短距離移動需求。」</span><br />
                                     <span class="font_bold emphasize_text">「探查展區環境對於電動滑板車的適配度。」</span>
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">
-                                    作為後續行動方向，套入目標管理框架OGSM，來理順是否合乎研究目標和目的。
+                                    作為後續行動方向，<span class="emphasize_text">套入目標管理框架OGSM</span>，來理順是否合乎研究目標和目的。
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">
                                     透過研究「探討逛展族群因哪些因素，影響展區中短距離移動需求」、「探查展區環境對於電動滑板車的適配度」，<br />
