--- a/oloo_works_2.html
+++ b/oloo_works_2.html
@@ -172,7 +172,7 @@
                     <div class="pup_content" style="margin-top:30px;">
                         <div class="part_title h5 font_bold emphasize_text">招募受訪者：招募問卷</div>
                         <div class="pup_normal_text" style="margin-top:10px;">
-                            定義<span class="emphasize_text">議題的重要面向</span>制定招募問卷內容，問題從概念方向→明確具篩選性→開放式了解細節為設計原則。
+                            定義<span class="emphasize_text">議題的重要面向</span>制定招募問卷內容，問題從<span class="emphasize_text">「概念方向→明確具篩選性→開放式了解細節」</span>為設計原則。
                         </div>
                         <div class="pup_normal_text_small" style="margin-top:10px;margin-bottom:5px;">以部分內容為例</div>
                         <div class="pup_content_pic">
