--- a/oloo_works_3.html
+++ b/oloo_works_3.html
@@ -92,9 +92,9 @@
                 <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:50px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">一、清洗訪談資料</div>
-                        <div class="pup_normal_text">將訪談記錄篩選出具研究目標相關之內容，<span class="emphasize_text">以一項獨立事件之文字描述為單位</span>，將事件依「客觀事實的明確關係」、「感受、決策、想法的因果關係」<span class="emphasize_text">切片成句子</span>。</div>
+                        <div class="pup_normal_text">將訪談記錄篩選出具研究目標相關之內容，<span class="emphasize_text">以一項獨立事件之文字描述為單位</span>，<br/>將事件依「客觀事實的明確關係」、「感受、決策、想法的因果關係」<span class="emphasize_text">切片成句子</span>。</div>
                         <div class="pup_content_pic" style="margin-top:20px;">
-                            <div class="pup_normal_text" style="margin-bottom:0px;">個人負責擔任副訪時，所記錄之訪談內容進行清洗整理至對應問項底下。</div>
+                            <div class="pup_normal_text" style="margin-bottom:0px;">個人負責所清洗之資料。</div>
                             <div class="pup_normal_text_small" style="margin-bottom:5px;"><span class="emphasize_text">含有客戶(oloo)保密內容，僅展示縮圖。</span></div>
                             <picture>
                                 <img src="images/oloo_pic_3-8.png" style="max-width:100%">
@@ -210,7 +210,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">說明</div>
                         <div class="pup_normal_text" style="margin-top:0px;">
-                            根據研究目標和預期為方向，呈現研究洞見作為成果發表，以「<span class="emphasize_text">描述洞見內容→資料來源和證明根據→結論和行動建議」</span>為架構，鋪陳成果作為簡報內容。
+                            根據研究目標和預期為方向，呈現研究洞見作為成果發表，<br/>以「<span class="emphasize_text">描述洞見內容→資料來源和證明根據→結論和行動建議」</span>為架構，鋪陳成果作為簡報內容。
                         </div>
                     </div>
                 </div>
@@ -218,7 +218,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">一、簡報草稿</div>
                         <div class="pup_normal_text" style="margin-top:0px;">
-                            先以標題、文字內容排整架構，方便接續討論→修改→定稿。
+                            先以標題、文字內容排整架構，方便接續「討論→修改→定稿」。
                         </div>
                         <div class="pup_normal_text emphasize_text" style="margin-top:20px;margin-bottom:5px;"><span>以個人編寫範圍為例。</span></div>
                         <div class="pup_normal_text_small" style="margin-bottom:5px;">逛展族群「體力與時間的需求和考量」</div>
@@ -230,8 +230,7 @@
                     </div>
                     <div class="pup_content" style="margin-top:30px;">
                         <div class="part_title h5 font_bold emphasize_text">二、製作簡報</div>
-                        <div class="pup_normal_text emphasize_text" style="margin-top:20px;margin-bottom:5px;"><span>以個人編寫範圍為例。</span></div>
-                        <div class="pup_normal_text">
+                        <div class="pup_normal_text" id="t5_8">
                             <a href="https://drive.google.com/file/d/1j_4-eB7PA6byz0AXoQirV0H5_B0rabhz/view" target="_blank" class="pup_window_btn">前往簡報內容(可公開部分)</a>
                         </div>
                     </div>
