--- a/oloo_works_4.html
+++ b/oloo_works_4.html
@@ -92,7 +92,7 @@
                 <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:30px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">說明</div>
-                        <div class="pup_normal_text emphasize_text">有能力察覺資料性質、共通性...等，依具專案需要有邏輯進行分類、統整並予以說明。</div>
+                        <div class="pup_normal_text emphasize_text">有能力察覺資料性質、共通性...等，依專案需要有邏輯進行分類、統整並予以說明。</div>
                     </div>
                 </div>
                 <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:50px;">
@@ -185,16 +185,16 @@
                 <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:50px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">專案負責人評價</div>
-                        <div class="pup_normal_text_small" style="margin-top:10px;margin-bottom:5px;">
-                            專案負責人為企業UX顧問，同時於實踐大學任教UX相關課程。
-                        </div>
-                        <div class="pup_content_pic">
+                        <div class="pup_content_pic" style="margin-top:20px;margin-bottom:5px;">
                             <picture>
                                 <source media="(max-width:430px)" srcset="images/info_attribute_tell_img_3_420.jpg" />
                                 <source media="(max-width:768px)" srcset="images/info_attribute_tell_img_3_768.jpg" />
                                 <source media="(max-width:960px)" srcset="images/info_attribute_tell_img_3_960.jpg" />
                                 <img src="images/info_attribute_tell_img_3.jpg" alt="產品開發-UX研究專案 專案負責人對於我論述洞見的回饋">
                             </picture>
+                        </div>
+                        <div class="pup_normal_text_small">
+                            專案負責人為企業UX顧問，同時於實踐大學任教UX相關課程。
                         </div>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">制定議題</div>
                         <div class="pup_normal_text" style="margin-top:10px;">
-                            <span class="emphasize_text">能論述議題的制定原因，此次根據產品市場階段和現有研究資源給予說明。</span>
+                            <span class="emphasize_text">能論述議題的制定原因，</span>此次根據產品市場階段和現有研究資源給予說明。
                         </div>
                         <div class="pup_normal_text_small" style="margin-top:20px;margin-bottom:5px;">
                             如以下說明：
