--- a/oloo_works_4.html
+++ b/oloo_works_4.html
@@ -104,8 +104,8 @@
                                 <img src="images/oloo_pic_2-10.png" style="max-width:100%">
                             </picture>
                         </div>
-                        <div class="pup_normal_text" style="margin-top:30px;"><span class="emphasize_text">依研究目標的核心主題「電動滑板車」、「逛展族群」</span>並以對應地點「展演場區」進行分類<br />
-                            使後續議題制定能貼合研究目標。</div>
+                        <div class="pup_normal_text" style="margin-top:30px;"><span class="emphasize_text">個人依研究目標的核心主題「電動滑板車」、「逛展族群」</span>並以對應地點「展演場區」進行分類<br />
+                            幫助團隊後續議題制定能貼合研究目標。</div>
                         <div class="pup_normal_text font_bold emphasize_text" style="margin-top:20px;margin-bottom:5px;">1.逛展族群對於展區中移動行為</div>
                         <div class="pup_content_pic">
                             <picture>
