--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1592,7 +1592,7 @@
                         <div id="p13_title-1" class="work_info_title h3 font_bold">研究內容</div>
                         <div class="work_info_text" style="margin-bottom:30px;">
                             <span class="work_info_text_p font_bold">一、制定議題</span>
-                            <div class="work_info_subtext" style="padding-left:0px;">執行以下步驟：<br/>事前先與專案負責人了解研究目標脈絡，接續訪談Oloo創辦人了解營運的市場經驗。</div>
+                            <div class="work_info_subtext" style="padding-left:0px;">事前先與專案負責人了解研究目標脈絡，接續訪談Oloo創辦人了解營運的市場經驗。<br/>執行以下步驟：</div>
                             <ul style="list-style: decimal;padding-left:5px;">
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">桌面研究</span><span style="display:none;"><br />
@@ -1626,22 +1626,22 @@
                             <div class="work_info_subtext" style="padding-left:0px;">執行以下步驟：</div>
                             <ul style="list-style: decimal;padding-left:5px;">
                                 <li style="margin-top:10px;">
-                                    <span class="font_bold">拆解議題：</span><span style="display:none;"><br />
+                                    <span class="font_bold">拆解議題</span><span style="display:none;"><br />
                                     將議題列出各種面向，如：本次議題「探查展區環境對於電動滑板車的適配度」面向有展區地貌、場館設施規劃、外部因素...等，<br />
                                     將面向拆出次要面向，如：外部因素有天氣、周邊環境、交通連結、節慶活動、同行者。<br />
                                     定義次要面向的指標，如：同行者有類型、人數、共同目的、移動方式。</span>
                                 </li>
                                 <li style="margin-top:10px;">
-                                    <span class="font_bold">招募受訪者：</span><span style="display:none;"><br />
+                                    <span class="font_bold">制定招募受訪問卷</span><span style="display:none;"><br />
                                     根據<span class="font_bold">議題重要面向設定招募條件</span>，如：同行者則招募條件為「有與他人一起逛展的經驗」；<br />
                                     並制定招募問卷內容，問題從<span class="font_bold">概念方向→明確具篩選性→開放式了解細節</span>為設計原則。</span>
                                 </li>
                                 <li style="margin-top:10px;">
-                                    <span class="font_bold">規劃訪綱：</span><span style="display:none;"><br />
+                                    <span class="font_bold">規劃訪綱</span><span style="display:none;"><br />
                                     以議題重要面向制定訪談問項，各面向<span class="font_bold">須含有ORID屬性「客觀事實、感受、意義/想法、決策/行動」</span>其中兩種屬性之問項，並以開放式問句作描述。</span>
                                 </li>
                                 <li style="margin-top:10px;">
-                                    <span class="font_bold">完成訪談行動：</span><span style="display:none;"><br />
+                                    <span class="font_bold">完成訪談行動</span><span style="display:none;"><br />
                                     成員互相配置主訪員、副訪員，事前進行模擬訪談培養默契，並<span class="font_bold">驗證模擬結果能否關聯研究議題；</span><br />
                                     實際訪談中，須牢記研究目標適時追問或拉回至研究目標，保持虛心、好奇心尊重受訪者的發言，只詢問表示興趣不給予任何評價。</span>
                                 </li>
