--- a/uiux_index.html
+++ b/uiux_index.html
@@ -2013,22 +2013,22 @@
 
         </div>
         <div class="pup_window_small_title_container">
-            <div class="pup_window_small_title emphasize_text">閱讀、理解作者能力，<br />您的感受是？</div>
+            <div class="pup_window_small_title emphasize_text">閱讀、了解作者能力，<br />您的感受是？</div>
         </div>
         <div class="pup_window_small_content">
-            <div id="good_read" class="pup_window_content_btn set_middle done_evaluate_btn" role="button"><span>A.清晰易懂</span></div>
-            <div id="normal_read" class="pup_window_content_btn set_middle done_evaluate_btn" role="button"><span>B.還算好懂</span></div>
-            <div id="bad_read" class="pup_window_content_btn set_middle done_evaluate_btn" role="button"><span>C.複雜難懂</span></div>
+            <div id="good_read" class="pup_window_content_btn set_middle done_evaluate_btn" role="button"><span>清晰易懂</span></div>
+            <div id="normal_read" class="pup_window_content_btn set_middle done_evaluate_btn" role="button"><span>能夠了解</span></div>
+            <div id="bad_read" class="pup_window_content_btn set_middle done_evaluate_btn" role="button"><span>不好閱讀</span></div>
         </div>
     </div>
     <!-- ... 回饋瀏覽感受 end ... -->
     <!-- ... 完成回饋瀏覽感受  ... -->
     <div class="done_evaluate_pup" style="display:none;">
         <div class="pup_window_small_title_container">
-            <div class="pup_window_small_title emphasize_text" style="text-align:center;">已完成回饋，感謝您</div>
+            <div class="pup_window_small_title emphasize_text" style="text-align:center;">感謝您的回饋</div>
         </div>
         <div class="pup_window_small_tip">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScLUUrjDiHP_veNITIwouQITFz3aXFL_tX_TLLcaVVOBH9TvQ/viewform" target="_blank"><div class="pup_window_content_btn set_middle" role="button" style="margin-top:10px;"><span>給予完整回饋，10分鐘填寫表單</span></div></a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScLUUrjDiHP_veNITIwouQITFz3aXFL_tX_TLLcaVVOBH9TvQ/viewform" target="_blank"><div class="pup_window_content_btn set_middle" role="button" style="margin-top:10px;"><span>給予更多回饋，10分鐘填寫表單</span></div></a>
             <div style="text-align:center;margin-top:5px;">僅6題必填選擇題</div>
             <div class="pup_window_content_btn set_middle close_done_evaluate_pup active" role="button"><span>繼續瀏覽作品集</span></div>
         </div>
