--- a/uiux_index.html
+++ b/uiux_index.html
@@ -196,6 +196,19 @@
     <div id="menu_btn" class="page_choice_btn_container set_middle" role="button">
 
     </div>
+    <script>
+        $(document).ready(function() {
+            $(window).scroll(function(event) {
+                var scroll = $(window).scrollTop();
+                if (scroll > parseInt($(".p14_page").offset().top)) {
+                    $(".page_choice_btn_container").addClass("hvr-wobble-vertical");
+                } else {
+                    $(".page_choice_btn_container").removeClass("hvr-wobble-vertical");
+                }
+            });
+        });
+
+    </script>
     <!-- 回饋瀏覽感受 -->
     <div class="give_evaluate_btn_container">
         <div class="give_evaluate_btn_close_container set_middle">
@@ -1592,27 +1605,27 @@
                         <div id="p13_title-1" class="work_info_title h3 font_bold">研究內容</div>
                         <div class="work_info_text" style="margin-bottom:30px;">
                             <span class="work_info_text_p font_bold">一、制定議題</span>
-                            <div class="work_info_subtext" style="padding-left:0px;">事前先與專案負責人了解研究目標脈絡，接續訪談Oloo創辦人了解營運的市場經驗。<br/>執行以下步驟：</div>
+                            <div class="work_info_subtext" style="padding-left:0px;">事前先與專案負責人了解研究目標脈絡，接續訪談Oloo創辦人了解營運的市場經驗。<br />執行以下步驟：</div>
                             <ul style="list-style: decimal;padding-left:5px;">
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">桌面研究</span><span style="display:none;"><br />
-                                    使研究前期假設有所依據，<span class="font_bold">定義了研究目標的核心主題</span>「電動滑板車」、「展演場區」，根據主題於部落客心得、各大社群論壇、google評價留言，以研究目標為範圍收集資訊。</span>
+                                        使研究前期假設有所依據，<span class="font_bold">定義了研究目標的核心主題</span>「電動滑板車」、「展演場區」，根據主題於部落客心得、各大社群論壇、google評價留言，以研究目標為範圍收集資訊。</span>
                                 </li>
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">提出假設</span><span style="display:none;"><br />
-                                    經桌面研究獲取資訊，成員各自<span class="font_bold">以「價值主張地圖」收斂提出假設</span>，延伸導出「精實畫布」使假設更加明確。</span>
+                                        經桌面研究獲取資訊，成員各自<span class="font_bold">以「價值主張地圖」收斂提出假設</span>，延伸導出「精實畫布」使假設更加明確。</span>
                                 </li>
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">萃取假設</span><span style="display:none;"><br />
-                                    將各自假設推演論述，<span class="font_bold">收斂出商業機會和風險</span>；<br />利用機會句型：「相信...因此有好的結果。」、風險句型：「如果...可能有不好的結果。」輔助論述。</span>
+                                        將各自假設推演論述，<span class="font_bold">收斂出商業機會和風險</span>；<br />利用機會句型：「相信...因此有好的結果。」、風險句型：「如果...可能有不好的結果。」輔助論述。</span>
                                 </li>
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">篩選假設</span><span style="display:none;"><br />
-                                    成員交互驗證各自的商業機會、風險，根據「已知、未知」和「商業價值高、低」以十字量表分類排序出<span class="font_bold">具「未知」和「高商業價值」</span>之機會和風險。</span>
+                                        成員交互驗證各自的商業機會、風險，根據「已知、未知」和「商業價值高、低」以十字量表分類排序出<span class="font_bold">具「未知」和「高商業價值」</span>之機會和風險。</span>
                                 </li>
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">完成制定議題</span><span style="display:none;"><br />
-                                    觀察商業機會、風險依共通點分類1~3組，並篩選收斂出研究議題；<br />以句型「透過研究該議題，可以達成某項研究目標...」、「因研究該議題能達成某項研究預期...」輔助解釋。</span>
+                                        觀察商業機會、風險依共通點分類1~3組，並篩選收斂出研究議題；<br />以句型「透過研究該議題，可以達成某項研究目標...」、「因研究該議題能達成某項研究預期...」輔助解釋。</span>
                                 </li>
                             </ul>
                             <div class="pup_link_area" style="margin-top:10px;">
@@ -1627,23 +1640,23 @@
                             <ul style="list-style: decimal;padding-left:5px;">
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">拆解議題</span><span style="display:none;"><br />
-                                    將議題列出各種面向，如：本次議題「探查展區環境對於電動滑板車的適配度」面向有展區地貌、場館設施規劃、外部因素...等，<br />
-                                    將面向拆出次要面向，如：外部因素有天氣、周邊環境、交通連結、節慶活動、同行者。<br />
-                                    定義次要面向的指標，如：同行者有類型、人數、共同目的、移動方式。</span>
+                                        將議題列出各種面向，如：本次議題「探查展區環境對於電動滑板車的適配度」面向有展區地貌、場館設施規劃、外部因素...等，<br />
+                                        將面向拆出次要面向，如：外部因素有天氣、周邊環境、交通連結、節慶活動、同行者。<br />
+                                        定義次要面向的指標，如：同行者有類型、人數、共同目的、移動方式。</span>
                                 </li>
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">制定招募受訪問卷</span><span style="display:none;"><br />
-                                    根據<span class="font_bold">議題重要面向設定招募條件</span>，如：同行者則招募條件為「有與他人一起逛展的經驗」；<br />
-                                    並制定招募問卷內容，問題從<span class="font_bold">概念方向→明確具篩選性→開放式了解細節</span>為設計原則。</span>
+                                        根據<span class="font_bold">議題重要面向設定招募條件</span>，如：同行者則招募條件為「有與他人一起逛展的經驗」；<br />
+                                        並制定招募問卷內容，問題從<span class="font_bold">概念方向→明確具篩選性→開放式了解細節</span>為設計原則。</span>
                                 </li>
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">規劃訪綱</span><span style="display:none;"><br />
-                                    以議題重要面向制定訪談問項，各面向<span class="font_bold">須含有ORID屬性「客觀事實、感受、意義/想法、決策/行動」</span>其中兩種屬性之問項，並以開放式問句作描述。</span>
+                                        以議題重要面向制定訪談問項，各面向<span class="font_bold">須含有ORID屬性「客觀事實、感受、意義/想法、決策/行動」</span>其中兩種屬性之問項，並以開放式問句作描述。</span>
                                 </li>
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">完成訪談行動</span><span style="display:none;"><br />
-                                    成員互相配置主訪員、副訪員，事前進行模擬訪談培養默契，並<span class="font_bold">驗證模擬結果能否關聯研究議題；</span><br />
-                                    實際訪談中，須牢記研究目標適時追問或拉回至研究目標，保持虛心、好奇心尊重受訪者的發言，只詢問表示興趣不給予任何評價。</span>
+                                        成員互相配置主訪員、副訪員，事前進行模擬訪談培養默契，並<span class="font_bold">驗證模擬結果能否關聯研究議題；</span><br />
+                                        實際訪談中，須牢記研究目標適時追問或拉回至研究目標，保持虛心、好奇心尊重受訪者的發言，只詢問表示興趣不給予任何評價。</span>
                                 </li>
                             </ul>
                             <div class="pup_link_area" style="margin-top:10px;">
@@ -1659,20 +1672,20 @@
                             <ul style="list-style: decimal;padding-left:5px;">
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">清洗訪談資料</span><span style="display:none;"><br />
-                                    將訪談記錄篩選出具研究目標相關之內容，<span class="font_bold">以一項獨立事件之文字描述為單位</span>，將事件依「客觀事實的明確關係」、「感受、決策、想法的因果關係」<span class="font_bold">切片成句子</span>。</span>
+                                        將訪談記錄篩選出具研究目標相關之內容，<span class="font_bold">以一項獨立事件之文字描述為單位</span>，將事件依「客觀事實的明確關係」、「感受、決策、想法的因果關係」<span class="font_bold">切片成句子</span>。</span>
                                 </li>
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">編碼事件切片</span><span style="display:none;"><br />
-                                    以「切片人員姓名」、「受訪者代號」、<span class="font_bold">「研究議題」、「ORID屬性」進行編碼</span>，後續作系統性分類方便發現洞見。</span>
+                                        以「切片人員姓名」、「受訪者代號」、<span class="font_bold">「研究議題」、「ORID屬性」進行編碼</span>，後續作系統性分類方便發現洞見。</span>
                                 </li>
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">發現洞見</span><span style="display:none;"><br />
-                                    彙整共六位受訪者訪談的<span class="font_bold">切片內容，以「親合圖」模式察覺有共通性的主題範圍</span>，思考主題當中的切片將有相同的原因、脈絡給予詮釋，和成員以「六頂思考帽」方式進行思辨驗證。<br />
-                                    探討各<span class="font_bold">詮釋中共同的痛點、需求</span>，讓已知事情有新的認識、補充細節，讓未知事情被注意和認知，最後形成研究洞見<span class="font_bold">啟發成商業機會、風險。</span></span>
+                                        彙整共六位受訪者訪談的<span class="font_bold">切片內容，以「親合圖」模式察覺有共通性的主題範圍</span>，思考主題當中的切片將有相同的原因、脈絡給予詮釋，和成員以「六頂思考帽」方式進行思辨驗證。<br />
+                                        探討各<span class="font_bold">詮釋中共同的痛點、需求</span>，讓已知事情有新的認識、補充細節，讓未知事情被注意和認知，最後形成研究洞見<span class="font_bold">啟發成商業機會、風險。</span></span>
                                 </li>
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">完成研究呈現</span><span style="display:none;"><br />
-                                    根據研究目標和預期為方向，呈現研究洞見作為成果發表，以「<span class="font_bold">描述洞見內容→資料來源和證明根據→結論和行動建議」</span>為架構，鋪陳成果作為簡報內容。</span>
+                                        根據研究目標和預期為方向，呈現研究洞見作為成果發表，以「<span class="font_bold">描述洞見內容→資料來源和證明根據→結論和行動建議」</span>為架構，鋪陳成果作為簡報內容。</span>
                                 </li>
                             </ul>
                             <div class="pup_link_area" style="margin-top:10px;">
@@ -1708,7 +1721,7 @@
     </div>
     <!-- ... p13 end ... -->
     <!-- ... p14... -->
-    <div class="page_area">
+    <div class="page_area p14_page">
         <div class="page_content">
             <div class="page_num_container">
                 第14頁<img src="images/page_num_line_img.png" class="page_num_line_img" alt="區隔線"><span style="color:#7D7D7D">UI.UX作品集 ‧ 共16頁</span>
@@ -2028,7 +2041,9 @@
             <div class="pup_window_small_title emphasize_text" style="text-align:center;">感謝您的回饋</div>
         </div>
         <div class="pup_window_small_tip">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScLUUrjDiHP_veNITIwouQITFz3aXFL_tX_TLLcaVVOBH9TvQ/viewform" target="_blank"><div class="pup_window_content_btn set_middle" role="button" style="margin-top:10px;"><span>給予更多回饋，10分鐘填寫表單</span></div></a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScLUUrjDiHP_veNITIwouQITFz3aXFL_tX_TLLcaVVOBH9TvQ/viewform" target="_blank">
+                <div class="pup_window_content_btn set_middle" role="button" style="margin-top:10px;"><span>給予更多回饋，10分鐘填寫表單</span></div>
+            </a>
             <div style="text-align:center;margin-top:5px;">僅6題必填選擇題</div>
             <div class="pup_window_content_btn set_middle close_done_evaluate_pup active" role="button"><span>繼續瀏覽作品集</span></div>
         </div>
