--- a/sino_works_1.html
+++ b/sino_works_1.html
@@ -84,8 +84,8 @@
 
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_1 h5 font_bold"><a href="#sino_tab_1" class="set_middle"><span>資訊架構</span></a></div>
-            <div id="sino_w1_tab2" class="pup_window_content_tab pup_tab_btn sino_pup_tab_2 h5 font_bold"><a href="#sino_tab_2" class="set_middle"><span>頁面布局</span></a></div>
-            <div id="sino_w1_tab3" class="pup_window_content_tab pup_tab_btn sino_pup_tab_3 h5 font_bold"><a href="#sino_tab_3" class="set_middle"><span>功能機制</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_2 h5 font_bold"><a href="#sino_tab_2" class="set_middle" id="sino_w1_tab2" ><span>頁面布局</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_3 h5 font_bold"><a href="#sino_tab_3" class="set_middle" id="sino_w1_tab3"><span>功能機制</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
 
