--- a/sino_works_1.html
+++ b/sino_works_1.html
@@ -75,7 +75,7 @@
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
             <div class="h4 font_bold">網路投保網站&nbsp;規劃內容</div>
-            <a href="uiux_index.html#p7_title">
+            <a href="uiux_index.html#p7_title" id="sino_w1_back">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
                 </div>
@@ -83,8 +83,8 @@
         </div>
 
         <div class="pup_window_content_tab_container">
-            <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_1 h5 font_bold"><a href="#sino_tab_1" class="set_middle"><span>資訊架構</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_2 h5 font_bold"><a href="#sino_tab_2" class="set_middle" id="sino_w1_tab2" ><span>頁面布局</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_1 h5 font_bold"><a href="#sino_tab_1" class="set_middle" id="sino_w1_tab1"><span>資訊架構</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_2 h5 font_bold"><a href="#sino_tab_2" class="set_middle" id="sino_w1_tab2"><span>頁面布局</span></a></div>
             <div class="pup_window_content_tab pup_tab_btn sino_pup_tab_3 h5 font_bold"><a href="#sino_tab_3" class="set_middle" id="sino_w1_tab3"><span>功能機制</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
@@ -679,7 +679,7 @@
                     </div>
                 </div>
 
-                <div class="pup_window_content_next_tip pup_tab_btn sino_pup_tab_btn_2">接續以資訊架構，建立<a href="#sino_tab_2">頁面布局</a></div>
+                <div class="pup_window_content_next_tip pup_tab_btn sino_pup_tab_btn_2">接續以資訊架構，建立<a href="#sino_tab_2" id="sino_w1_tab1to2">頁面布局</a></div>
                 <script>
                     $(document).ready(function() {
                         $(".sino_pup_tab_btn_2").click(function() {
@@ -763,7 +763,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="pup_window_content_next_tip pup_tab_btn sino_pup_tab_btn_3">接續繪製線框稿呈現<a href="#sino_tab_3">功能機制</a></div>
+                <div class="pup_window_content_next_tip pup_tab_btn sino_pup_tab_btn_3">接續繪製線框稿呈現<a href="#sino_tab_3" id="sino_w1_tab2to3">功能機制</a></div>
                 <script>
                     $(document).ready(function() {
                         $(".sino_pup_tab_btn_3").click(function() {
@@ -788,7 +788,7 @@
                             <span style="font-size:16px;">*版面空間有限，電腦裝置瀏覽為佳。</span>
                         </div>
                         <div class="pup_normal_text">
-                            <a href="https://www.figma.com/design/iBEclKLRC0BWhdVneCdE7h/%E7%B6%B2%E7%AB%99%E5%85%A7%E5%AE%B9%E8%A6%8F%E5%8A%83?node-id=0-1&t=gTP4YLRqzrOp1k9r-1" target="_blank" class="pup_window_btn">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整線框稿</a>
+                            <a href="https://www.figma.com/design/iBEclKLRC0BWhdVneCdE7h/%E7%B6%B2%E7%AB%99%E5%85%A7%E5%AE%B9%E8%A6%8F%E5%8A%83?node-id=0-1&t=gTP4YLRqzrOp1k9r-1" target="_blank" class="pup_window_btn" id="sino_w1_tab3tofigma-1">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整線框稿</a>
                         </div>
                     </div>
                 </div>
@@ -867,7 +867,7 @@
                 <div class="pup_window_content_end_tip_container">
                     <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">功能機制&nbsp;規劃內容</span></span>
                 </div>
-                <div class="pup_window_content_next_tip">前往figma<a href="https://www.figma.com/design/iBEclKLRC0BWhdVneCdE7h/%E7%B6%B2%E7%AB%99%E5%85%A7%E5%AE%B9%E8%A6%8F%E5%8A%83?node-id=0-1&t=gTP4YLRqzrOp1k9r-1" target="_blank">瀏覽完整線框稿</a></div>
+                <div class="pup_window_content_next_tip">前往figma<a href="https://www.figma.com/design/iBEclKLRC0BWhdVneCdE7h/%E7%B6%B2%E7%AB%99%E5%85%A7%E5%AE%B9%E8%A6%8F%E5%8A%83?node-id=0-1&t=gTP4YLRqzrOp1k9r-1" target="_blank" id="sino_w1_tab3tofigma-2">瀏覽完整線框稿</a></div>
             </div>
 
         </div>
