--- a/sino_works_3.html
+++ b/sino_works_3.html
@@ -75,7 +75,7 @@
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
             <div class="h4 font_bold">網路投保網站&nbsp;規範文件</div>
-            <a href="uiux_index.html#p7_title">
+            <a href="uiux_index.html#p7_title" id="sino_w3_back">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
                 </div>
@@ -83,8 +83,8 @@
         </div>
 
         <div class="pup_window_content_tab_container">
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_8" class="set_middle"><span>文件內容</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_9" class="set_middle"><span>運用要點</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_8" class="set_middle" id="sino_w3_tab1"><span>文件內容</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_9" class="set_middle" id="sino_w3_tab2"><span>運用要點</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
 
@@ -97,7 +97,7 @@
                             使團隊開發、維護和交接時有所依據，<span class="emphasize_text">保持視覺稿與前端切版的一致性</span>，依操作邏輯規格化文字、顏色和介面元件，從而有效進行工作任務。
                         </div>
                         <div class="pup_normal_text">
-                            <a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1556-1126&t=Wuz4sUAQnecBfxu5-1" target="_blank" class="pup_window_btn">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整規範文件</a>
+                            <a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1556-1126&t=Wuz4sUAQnecBfxu5-1" target="_blank" class="pup_window_btn" id="sino_w3_tab1tofigma-1">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整規範文件</a>
                         </div>
                     </div>
                 </div>
@@ -283,14 +283,14 @@
                 <div class="pup_window_content_end_tip_container">
                     <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">規劃文件&nbsp;文件內容</span></span>
                 </div>
-                <div class="pup_window_content_next_tip"><span class="emphasize_text">前往figma</span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1556-1126&t=Wuz4sUAQnecBfxu5-1" target="_blank">瀏覽完整規範文件</a></div>
+                <div class="pup_window_content_next_tip"><span class="emphasize_text">前往figma</span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1556-1126&t=Wuz4sUAQnecBfxu5-1" target="_blank" id="sino_w3_tab1tofigma-2">瀏覽完整規範文件</a></div>
             </div>
 
             <div id="sino_tab_9" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
                         <div class="pup_normal_text">
-                            <a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1556-1126&t=Wuz4sUAQnecBfxu5-1" target="_blank" class="pup_window_btn">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整規範文件</a>
+                            <a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1556-1126&t=Wuz4sUAQnecBfxu5-1" target="_blank" class="pup_window_btn" id="sino_w3_tab2tofigma-1">前往<img src="images/figma_logo.svg" style="width:24px;">figma瀏覽完整規範文件</a>
                         </div>
                     </div>
                 </div>
@@ -442,7 +442,7 @@
                 <div class="pup_window_content_end_tip_container">
                     <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">規劃文件&nbsp;運用要點</span></span>
                 </div>
-                <div class="pup_window_content_next_tip"><span class="emphasize_text">前往figma</span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1556-1126&t=Wuz4sUAQnecBfxu5-1" target="_blank">瀏覽完整規範文件</a></div>
+                <div class="pup_window_content_next_tip"><span class="emphasize_text">前往figma</span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_Mockups?node-id=1556-1126&t=Wuz4sUAQnecBfxu5-1" target="_blank" id="sino_w3_tab2tofigma-2">瀏覽完整規範文件</a></div>
             </div>
 
         </div>
