--- a/sino_works_5.html
+++ b/sino_works_5.html
@@ -75,7 +75,7 @@
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
             <div class="h4 font_bold">網路投保網站&nbsp;實行性原型</div>
-            <a href="uiux_index.html#p7_title">
+            <a href="uiux_index.html#p7_title" id="sino_w5_back">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
                 </div>
@@ -83,8 +83,8 @@
         </div>
 
         <div class="pup_window_content_tab_container">
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_16" class="set_middle"><span>切版說明</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_17" class="set_middle"><span>動效內容</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_16" class="set_middle" id="sino_w5_tab1"><span>切版說明</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_17" class="set_middle" id="sino_w5_tab2"><span>動效內容</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
 
