--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -75,7 +75,7 @@
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
             <div class="h4 font_bold">網路投保網站&nbsp;測試報告</div>
-            <a href="uiux_index.html#p7_title">
+            <a href="uiux_index.html#p7_title" id="sino_w6_back">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
                 </div>
@@ -83,9 +83,9 @@
         </div>
 
         <div class="pup_window_content_tab_container">
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_13" class="set_middle"><span>內容說明</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_14" class="set_middle"><span>行動建議</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_15" class="set_middle"><span>行動決策</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_13" class="set_middle" id="sino_w6_tab1"><span>內容說明</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_14" class="set_middle" id="sino_w6_tab2"><span>行動建議</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_15" class="set_middle" id="sino_w6_tab3"><span>行動決策</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
 
