--- a/uiux_index.html
+++ b/uiux_index.html
@@ -2027,7 +2027,7 @@
 
         </div>
         <div class="pup_window_small_title_container">
-            <div class="pup_window_small_title emphasize_text">閱讀、了解作者能力，<br />您的感受是？</div>
+            <div class="pup_window_small_title emphasize_text">作品集閱讀、了解作者能力，<br />您的感受是？</div>
         </div>
         <div class="pup_window_small_content">
             <div id="good_read" class="pup_window_content_btn set_middle done_evaluate_btn" role="button"><span>清晰易懂</span></div>
