--- a/sino_works_2.html
+++ b/sino_works_2.html
@@ -92,8 +92,8 @@
             <div id="sino_tab_4" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">一、聯想網站主題關鍵字</div>
-                        <div class="pup_normal_text">藉由文字方式使永豐業務單位參予視覺定義，使視覺風格貼合產業和市場，執行設計有基礎共識和標準。</div>
+                        <div class="part_title h5 font_bold emphasize_text">一、定義服務取向和客戶屬性</div>
+                        <div class="pup_normal_text">使視覺風格貼合產業和市場，執行設計有基礎共識和標準。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
                                 <div class="pup_content_pic_item" style="text-align:left;">
@@ -111,8 +111,8 @@
                 </div>
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">二、歸納出網站形容詞</div>
-                        <div class="pup_normal_text">統整服務取向、客戶屬性(產業和市場)，具象化網站(產品)面向。</div>
+                        <div class="part_title h5 font_bold emphasize_text">二、統整精煉產品面向</div>
+                        <div class="pup_normal_text">統整服務取向、客戶屬性，明確產品設計方向。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
                                 <div class="pup_content_pic_item" style="text-align:left;">
@@ -129,7 +129,7 @@
                 </div>
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">三、將網站形容詞，以視覺概念進行描述</div>
+                        <div class="part_title h5 font_bold emphasize_text">三、依產品面向以視覺概念進行描述</div>
                         <div class="pup_normal_text">另可作其他面向依據，如：網站文案的用詞語氣、內容主題的制定...等。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
