--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1024,10 +1024,10 @@
                                 <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_2.html">設計稿</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_3.html">跨部門開發文件、設計系統介紹</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_3.html">產品開發文件、設計系統介紹</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_mockup?node-id=0-1&p=f&t=QwG6qnLmWYiPU3aM-0" target="_blank" id="sino_mockups_figma">跨部門開發文件、設計系統(figma)</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_mockup?node-id=0-1&p=f&t=QwG6qnLmWYiPU3aM-0" target="_blank" id="sino_mockups_figma">產品開發文件、設計系統(figma)</a></span>
                             </div>
 
                             <div style="margin-top:10px;">
